# projeto_processamento

./: README.md  pyproject.toml  requirements.txt
tests/: Projeto.ipynb
tests/.ipynb_checkpoints/: Projeto-checkpoint.ipynb
tests/data/: dados.json  dados.xlsx  dados_pivot.xlsx
